--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ button {
 	height: 100%;
 	width: 100%;
 	position: relative;
+	overflow: hidden;
 }
 #sitewelcome {
 	position: absolute;
@@ -84,7 +85,7 @@ button {
 }
 .open-site {
 	opacity: 1 !important;
-    visibility: visible !important;
+	visibility: visible !important;
 }
 #site .topbar {
 	position: absolute;
@@ -120,7 +121,6 @@ button {
 	margin-top: 11.4px; 
 	font-size: 14px;
 	color: white;
-	/*font-weight: 600;*/
 	text-align: right;
 	font-family: 'montserrat-medium';
 }
@@ -154,20 +154,6 @@ button {
 	font-family: montserrat-regular;
 	font-size: inherit;
 }
-/*.text-right {
-	text-align: right;
-}*/
-/*.pagehome-text {
-	right: 0;
-	padding: 18px 47px 18px 47px;
-	text-transform: uppercase;
-	background-color: #1D71B8 !important;
-	color: white !important;
-	width: auto !important;
-	height: auto !important;
-	font-size: 24px !important;
-	cursor: pointer;
-}*/
 .pagehome-login {
 	position: relative;
 	float: right;
@@ -181,7 +167,6 @@ button {
 .logo img {
 	height: 89px;
 	width: 209.71px;
-	/*background: url("../img/logos/logo-fenix.png") 0% 0%/cover no-repeat;*/
 }
 .logo-config {
 	padding-right: 30px;
@@ -190,19 +175,19 @@ button {
 	height: 142.91px;
 	width: 282.71px;
 } 
-.logocentral svg {
+.logocentral img {
 	height: 74px;
-	width: 390px;
+	width: 335px;
 }
 .logo-container {
 	position: relative;
 }
-.logo-inner {
+/*.logo-inner {
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
 	text-align: center;
-}
+}*/
 .form-input-container{
 	padding-top: 14px;
 	display: flex;
@@ -234,7 +219,6 @@ button {
 	font-size: 13px;
 	text-indent: 16px;
 	border-radius: 0 19px 0 0;
-	/*border-radius: 30px 30px 0 30px;*/
 	border-left: 0;
 	padding-right: 28px;
 	border: 1px solid transparent;
@@ -301,9 +285,6 @@ button {
 	width: 513.77px;
 	height: 100%;
 	margin: 0 auto;
-	/*display: flex;
-	align-items: center;
-	justify-content: center;*/
 }
 .pageforgot-inner-box {
 	padding: 20px 0;
@@ -339,45 +320,30 @@ button {
 	color: rgb(0, 0, 0);
 	width: 263px;
 	height: 23px;
-	font-family: intercom-font, "Helvetica Neue", "Apple Color Emoji", Helvetica, Arial, sans-serif;
+	/*font-family: intercom-font, "Helvetica Neue", "Apple Color Emoji", Helvetica, Arial, sans-serif;*/
 	font-size: 14px;
 	font-weight: normal;
 	line-height: 1.33;
-	/*background-color: rgb(255, 255, 255);*/
-	/*white-space: pre-wrap;*/
-	/*overflow-wrap: break-word;*/
 	padding: 4px 7px 4px 7px;
 	border-color: transparent;
 	border-top: 1px solid rgb(230, 230, 230);
 	border-left: 1px solid rgb(230, 230, 230);
 	border-right: 1px solid rgb(230, 230, 230);
 	border-bottom: 1px solid rgb(230, 230, 230);
-	/*border-top: 1px solid rgb(4, 152, 178);
-	border-left: 1px solid rgb(4, 152, 178);
-	border-right: 1px solid rgb(4, 152, 178);
-	border-bottom: 1px solid rgb(4, 152, 178);*/
 }
 .section-config-profile .config-profile-in input {
 	color: rgb(0, 0, 0);
 	width: 183px;
 	height: 36px;
-	font-family: intercom-font, "Helvetica Neue", "Apple Color Emoji", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	font-weight: normal;
 	line-height: 1.33;
-	/*background-color: rgb(255, 255, 255);*/
-	/*white-space: pre-wrap;*/
-	/*overflow-wrap: break-word;*/
 	padding: 4px 7px 4px 7px;
 	border-color: transparent;
 	border-top: 1px solid rgb(230, 230, 230);
 	border-left: 1px solid rgb(230, 230, 230);
 	border-right: 1px solid rgb(230, 230, 230);
 	border-bottom: 1px solid rgb(230, 230, 230);
-	/*border-top: 1px solid rgb(4, 152, 178);
-	border-left: 1px solid rgb(4, 152, 178);
-	border-right: 1px solid rgb(4, 152, 178);
-	border-bottom: 1px solid rgb(4, 152, 178);*/
 }
 .section-config-profile .config-profile-in .icon-change {
 	display: inline-block;
@@ -438,16 +404,16 @@ button {
 	padding-top: 34px;
 }
 .config-button {
-    background-color: #1D71B8;
-    color: white;
-    padding: 5px 7px;
-    outline: none;
-    color: white;
-    font-size: 13px;
-    font-family: montserrat-semibold;
-    font-weight: 600;
-    border-radius: 3px;
-    border: 1px solid transparent;
+	background-color: #1D71B8;
+	color: white;
+	padding: 5px 7px;
+	outline: none;
+	color: white;
+	font-size: 13px;
+	font-family: montserrat-semibold;
+	font-weight: 600;
+	border-radius: 3px;
+	border: 1px solid transparent;
 }
 .config-button-green {
 	background-color: #9DC41A;
@@ -527,19 +493,12 @@ button {
 	min-width: 100%;
 	z-index: 90;
 	position: fixed;
-	/*display: flex;
-	justify-content: space-around;*/
 }
 .topbar-panel {
 	-webkit-box-shadow:  0px 1px 2px 0px rgba(224,224,224,1);
 	-moz-box-shadow:  0px 1px 2px 0px rgba(224,224,224,1);
 	box-shadow:  0px 1px 2px 0px rgba(224,224,224,1);
 }
-/*.topbar-multibar {
-	background-color: #01AFE7;
-	width: 100%;
-	height: 16px;
-}*/
 .topbar-inner {
 	display: flex;
 	display: -webkit-flex;
@@ -637,11 +596,6 @@ button {
 	visibility: hidden;
 	opacity: 0;
 }
-/*.topbar-iconprofile {
-	position: absolute;
-	right: 60px;
-	text-align: right;
-}*/
 .topbar-iconprofile h3 {
 	margin-top: 3px;
 	font-size: 12px;
@@ -753,7 +707,6 @@ button {
 .container-floatingchat {
 	z-index: 2;
 	position: absolute;
-	/*padding: 12px 40.2px;*/
 	text-align: center;
 	width: 100%;
 	height: 100%;
@@ -825,9 +778,6 @@ button {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	/*width: 67px;
-	margin: 0 auto;*/
-
 }
 .asa {
 	display: flex;
@@ -871,7 +821,6 @@ button {
 	padding-top: 141px;
 }
 .content-container {
-	/*width: 450px;*/
 	padding: 20px 40px 20px 35px;
 	margin-bottom: 50px;
 }
@@ -888,16 +837,11 @@ button {
 }
 .column-consumptions-profile {
 	position: relative;
-	/*width: 464.66px;
-	min-width: 464.66px;
-	height: 342px;*/
 	width: 9.96em; 
 	min-width: 9.96em;
 	height: 8.15em;
 }
 .column-consumptions-receipt {
-	/*width: 714px;
-	min-width: 714px;*/
 	position: relative;
 	min-width: 17.36em;
 	height: 8.15em;
@@ -905,7 +849,6 @@ button {
 }
 .column-consumptions-statistics {
 	position: relative;
-	/*width: 377.15px;*/
 	min-width: 8.97em;
 	height: 5.12em;
 	margin-right: 0.56em;
@@ -954,8 +897,6 @@ button {
 	display: flex;
 	display: -webkit-flex;
 	display: -ms-flexbox;
-	/*flex-wrap: nowrap;
-	justify-content: center;*/
 }
 .column-consumptions h1 {
 	font-size: 0.90em;
@@ -985,19 +926,12 @@ button {
 .team-card {
 	width: 270px;
 	margin: 25px 30px 15px 0;
-	/*-webkit-box-shadow: 0px 1px 5px -1px rgba(107,107,107,0.5);
-	box-shadow: 0px 1px 5px -1px rgba(107,107,107,0.5);*/
 	background-color: #fff;
-	/*border-radius: 13px;*/
 	display: inline-block;
-	/*border: 1px solid rgba(239,239,239,0.4);*/
 	height: 299px;
 	position: relative;
 }
 .section-team-card ul {
-	/*display: flex;
-	flex-wrap: wrap;
-	justify-content: center;*/
 	margin: 0 auto;
 	width: 1200px;
 }
@@ -1054,13 +988,10 @@ button {
 .preview-card {
 	width: 256.1px;
 	margin: 14px 17px 15px 0;
-	/*-webkit-box-shadow: 0px 1px 5px -1px rgba(107,107,107,0.5);
-	box-shadow: 0px 1px 5px -1px rgba(107,107,107,0.5);*/
 	background-color: #fff;
 	border-radius: 13px;
 	display: inline-block;
 	text-align: center;
-	/*border: 1px solid rgba(239,239,239,0.4);*/
 	height: 349.45px;
 	position: relative;
 }
@@ -1080,31 +1011,31 @@ button {
 	font-family: 'montserrat-medium';
 }
 .preview-electric-card .front {
-    border-radius: inherit;
-    height: 100%;
-    width: 100%;
+	border-radius: inherit;
+	height: 100%;
+	width: 100%;
 }
 .preview-electric-card .front .text{
 	position: absolute;
 	height: 100%;
-    width: 100%;
-    display: flex;
-    display: -webkit-flex;
+	width: 100%;
+	display: flex;
+	display: -webkit-flex;
 	display: -ms-flexbox;
-    align-items: center;
-    -webkit-align-items: center;
-    justify-content: center;
-    -webkit-justify-content: center;
+	align-items: center;
+	-webkit-align-items: center;
+	justify-content: center;
+	-webkit-justify-content: center;
 	-moz-justify-content: center;
-    border-radius: inherit;
-    background-color: rgba(58,58,58,0.8);
-    color: white;
-    font-family: 'montserrat-medium';
-    z-index: 2;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+	border-radius: inherit;
+	background-color: rgba(58,58,58,0.8);
+	color: white;
+	font-family: 'montserrat-medium';
+	z-index: 2;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 .preview-electric-card .front .img-preview {
 	width: 100%;
@@ -1123,32 +1054,27 @@ button {
 }
 
 .preview-new-card .front {
-    border-radius: inherit;
-    height: 100%;
-    width: 100%;
+	border-radius: inherit;
+	height: 100%;
+	width: 100%;
 }
 .preview-new-card .front .text{
 	position: absolute;
 	height: 100%;
-    width: 100%;
-    display: flex;
-    display: -webkit-flex;
+	width: 100%;
+	display: flex;
+	display: -webkit-flex;
 	display: -ms-flexbox;
-    align-items: center;
-    -webkit-align-items: center;
-/*    justify-content: center;
-    -webkit-justify-content: center;
-	-moz-justify-content: center;*/
-    border-radius: inherit;
-/*    background-color: #333232;
-    opacity: 0.7;*/
-    background-color: rgba(58,58,58,0.8);
-    color: white;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+	align-items: center;
+	-webkit-align-items: center;
+	border-radius: inherit;
+	background-color: rgba(58,58,58,0.8);
+	color: white;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 .preview-new-card .front .img-preview {
 	display: flex;
@@ -1177,7 +1103,6 @@ button {
 }
 .document-card-column1, .document-card-column2 {
 	color: white;
-	/*font-weight: 600;*/
 	letter-spacing: 0.5px;
 }
 .section-electric-card, .section-documents-card, .section-news-card {
@@ -1192,12 +1117,12 @@ button {
 	font-size: 16px;
 }
 .section-documents-card ul, .section-news-card ul, .section-electric-card ul {
-    display: flex;
-    display: -webkit-flex;
+	display: flex;
+	display: -webkit-flex;
 	display: -ms-flexbox;
-    flex-wrap: wrap;
-    justify-content: center;
-    -webkit-justify-content: center;
+	flex-wrap: wrap;
+	justify-content: center;
+	-webkit-justify-content: center;
 	-moz-justify-content: center;
 }
 .section-documents .section-title-documents h2 {
@@ -1213,13 +1138,13 @@ button {
 	text-transform: uppercase;
 }
 .section-electricmonitoring .section-subtitle-electricmonitoring h5 {
-    position: absolute;
-    right: 65px;
-    cursor: pointer;
-    color: #1D71B8;
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
+	position: absolute;
+	right: 65px;
+	cursor: pointer;
+	color: #1D71B8;
+	font-size: 13px;
+	font-weight: 600;
+	text-transform: uppercase;
 }
 .section-preview-card li {
 	cursor: pointer;
@@ -1271,14 +1196,6 @@ button {
 	left: 50%;
 	margin-left: -4px;
 }
-/*.section-electric-card .next-button:after, .section-electric-card .next-button:before, .section-electric-card .prev-button:after, .section-electric-card .prev-button:before {
-	content: "";
-	display: block;
-	width: 14px;
-	height: 2px;
-	background: #3483fa;
-	position: absolute;
-}*/
 .section-preview-card .next-button:after, .section-preview-card .next-button:before, .section-preview-card .prev-button:after, .section-preview-card .prev-button:before {
 	content: "";
 	display: block;
@@ -1308,10 +1225,6 @@ button {
 	-ms-transform: translateY(-50%);
 	z-index: 10;
 }
-/*.section-electric-card .next-button, .section-electric-card .prev-button {
-	top: 221px;
-}*/
-
 .section-electric-card .next-button {
 	right: 47px;
 }
